name:                encee
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/lancelet/encee#readme
license:             BSD3
license-file:        LICENSE
author:              Jonathan Merritt
maintainer:          j.s.merritt@gmail.com
copyright:           2016 Jonathan Merritt
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.GCode.Lexical.Lexer
                     , Data.GCode.Lexical.Position
                     , Data.GCode.Lexical.Tokens
                     , Data.GCode.Simple.Tokenizer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  default-language:    Haskell2010
  build-depends:       base         >= 4.7  && < 5
                     , bytestring   >= 0.10
                     , megaparsec   >= 5.0
                     , scientific   >= 0.3
                     , text         >= 1.2

executable encee-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , encee
  default-language:    Haskell2010

test-suite encee-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  default-language:    Haskell2010
  other-modules:       Data.GCode.Simple.TokenizerSpec
  build-depends:       base
                     , bytestring
                     , doctest
                     , encee
                     , tasty
                     , tasty-hunit

source-repository head
  type:     git
  location: https://github.com/lancelet/encee
